@@ -18,6 +18,7 @@
 13. When updating play seekbar from MPDStatus, only upate if more than 1
     second from calculated position.
 14. Slightly reduce height of toolbar.
+15. Add a slight border to context view when in sidebar.
 
 2.3.0
 -----
